 <project>
  <modelVersion>4.0.0</modelVersion>

     <parent>
         <groupId>com.jamonapi</groupId>
         <artifactId>jamon-parent</artifactId>
         <version>2.85</version>
     </parent>

  <artifactId>jamon</artifactId>
  <packaging>jar</packaging>
  <name>JAMon Core</name>

  <build>
    <finalName>jamon-${project.version}</finalName>
      <!-- generate javadoc and sources jars -->
      <plugins>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-javadoc-plugin</artifactId>
              <version>${maven.javadoc.plugin.version}</version>
              <!-- The following is needed for jdk 1.8 javadocs generation or failure. -->
              <configuration>
                  <additionalparam>-Xdoclint:none</additionalparam>
              </configuration>

          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-source-plugin</artifactId>
              <version>${maven.source.plugin.version}</version>
              <executions>
                  <execution>
                      <id>attach-sources</id>
                      <goals>
                          <goal>jar</goal>
                      </goals>
                  </execution>
              </executions>
          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-compiler-plugin</artifactId>
              <version>${maven.compiler.plugin.version}</version>
              <configuration>
                  <source>8</source>
                  <target>8</target>
              </configuration>
          </plugin>
          <plugin>
              <groupId>org.apache.maven.plugins</groupId>
              <artifactId>maven-surefire-plugin</artifactId>
              <version>3.2.5</version>
              <configuration>
                  <argLine>
                      --add-modules java.se
                      --add-exports java.base/jdk.internal.ref=ALL-UNNAMED
                      --add-opens java.base/java.lang=ALL-UNNAMED
                      --add-opens java.base/java.nio=ALL-UNNAMED
                      --add-opens java.base/sun.nio.ch=ALL-UNNAMED
                      --add-opens java.management/sun.management=ALL-UNNAMED
                      --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED
                      --add-opens java.base/java.util=ALL-UNNAMED
                      --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                  </argLine>
              </configuration>
          </plugin>
      </plugins>
  </build>

  <dependencies>

      <dependency>
          <groupId>org.eclipse.jetty</groupId>
          <artifactId>jetty-server</artifactId>
          <version>${jetty9.version}</version>
          <scope>provided</scope>
      </dependency>

      <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
          <version>${commons.version}</version>
          <scope>test</scope>
      </dependency>

      <dependency>
          <groupId>com.hazelcast</groupId>
          <artifactId>hazelcast</artifactId>
          <version>${hazelcast.version}</version>
      </dependency>

      <dependency>
          <groupId>org.apache.logging.log4j</groupId>
          <artifactId>log4j-slf4j-impl</artifactId>
          <version>${log4j.version}</version>
          <scope>test</scope>
      </dependency>

  </dependencies>


 </project>